@@ -16,105 +16,97 @@
 
 package org.gradle.internal.operations;
 
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.ListMultimap;
+import com.google.common.collect.Lists;
 import org.gradle.internal.UncheckedException;
 import org.gradle.internal.concurrent.Stoppable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.List;
+import java.util.LinkedList;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.Semaphore;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class DefaultBuildOperationWorkerRegistry implements BuildOperationWorkerRegistry, Stoppable {
     private static final Logger LOGGER = LoggerFactory.getLogger(DefaultBuildOperationWorkerRegistry.class);
-    private final int maxWorkerCount;
-    private final Object lock = new Object();
-    private int counter = 1;
-    private final ListMultimap<Thread, DefaultOperation> threads = ArrayListMultimap.create();
+    private final Semaphore semaphore;
+    private final AtomicInteger counter = new AtomicInteger();
+    private final AtomicInteger busyCount = new AtomicInteger();
+    private final WaitingForLeaseQueue waitingForLease = new WaitingForLeaseQueue();
+
+    private final ThreadLocal<LinkedList<DefaultOperation>> operationsPerThread = new ThreadLocal<LinkedList<DefaultOperation>>() {
+        @Override
+        protected LinkedList<DefaultOperation> initialValue() {
+            return Lists.newLinkedList();
+        }
+    };
+
     private final Root root = new Root();
 
     public DefaultBuildOperationWorkerRegistry(int maxWorkerCount) {
-        this.maxWorkerCount = maxWorkerCount;
+        this.semaphore = new Semaphore(maxWorkerCount);
         LOGGER.info("Using {} worker leases.", maxWorkerCount);
     }
 
     @Override
     public Operation getCurrent() {
-        List<DefaultOperation> operations = threads.get(Thread.currentThread());
+        LinkedList<DefaultOperation> operations = operationsPerThread.get();
         if (operations.isEmpty()) {
             throw new IllegalStateException("No build operation associated with the current thread");
         }
-        return operations.get(operations.size() - 1);
+        return operations.getLast();
     }
 
     @Override
     public Completion operationStart() {
-        List<DefaultOperation> operations = threads.get(Thread.currentThread());
-        LeaseHolder parent = operations.isEmpty() ? root : operations.get(operations.size() - 1);
+        LinkedList<DefaultOperation> operations = operationsPerThread.get();
+        LeaseHolder parent = operations.isEmpty() ? root : operations.getLast();
         return doStartOperation(parent);
     }
 
     private BuildOperationWorkerRegistry.Completion doStartOperation(LeaseHolder parent) {
-        synchronized (lock) {
-            int workerId = counter++;
-            Thread ownerThread = Thread.currentThread();
 
-            DefaultOperation operation = new DefaultOperation(parent, workerId, ownerThread);
-            while (!parent.grantLease()) {
-                if (LOGGER.isDebugEnabled()) {
-                    LOGGER.debug("Build operation {} waiting for a lease. Currently {} worker(s) in use", operation.getDisplayName(), root.leasesInUse);
-                }
-                try {
-                    lock.wait();
-                } catch (InterruptedException e) {
-                    throw UncheckedException.throwAsUncheckedException(e);
-                }
-            }
-
-            threads.put(ownerThread, operation);
-            if (LOGGER.isDebugEnabled()) {
-                LOGGER.debug("Build operation {} started ({} worker(s) in use).", operation.getDisplayName(), root.leasesInUse);
-            }
-            return operation;
+        parent.waitForLease();
+        busyCount.incrementAndGet();
+        int workerId = counter.incrementAndGet();
+        DefaultOperation operation = new DefaultOperation(parent, workerId, Thread.currentThread());
+        if (LOGGER.isDebugEnabled()) {
+            LOGGER.debug("Build operation {} started ({} worker(s) in use).", operation.getDisplayName(), busyCount);
         }
+        // this can be done out of locking, because it's for the current thread in any case
+        operationsPerThread.get().add(operation);
+        return operation;
     }
 
     @Override
     public void stop() {
-        synchronized (lock) {
-            if (!threads.isEmpty()) {
-                throw new IllegalStateException("Some build operations have not been marked as completed.");
-            }
+        if (busyCount.get() > 0) {
+            throw new IllegalStateException("Some build operations have not been marked as completed.");
         }
     }
 
     private abstract class LeaseHolder {
         abstract String getDisplayName();
 
-        abstract boolean grantLease();
+        abstract void waitForLease();
 
         abstract void releaseLease();
     }
 
     private class Root extends LeaseHolder {
-        int leasesInUse;
-
         public String getDisplayName() {
             return "root";
         }
 
         @Override
-        boolean grantLease() {
-            if (leasesInUse >= maxWorkerCount) {
-                return false;
-            }
-            leasesInUse++;
-            return true;
+        void waitForLease() {
+            semaphore.acquireUninterruptibly();
         }
 
         @Override
         void releaseLease() {
-            leasesInUse--;
+            semaphore.release();
+            waitingForLease.wakeUpFirst();
         }
     }
 
@@ -122,7 +114,8 @@ public class DefaultBuildOperationWorkerRegistry implements BuildOperationWorker
         private final LeaseHolder parent;
         private final int workerId;
         private final Thread ownerThread;
-        int children;
+        private volatile int children;
+        private final Object lock = new Object();
 
         DefaultOperation(LeaseHolder parent, int workerId, Thread ownerThread) {
             this.parent = parent;
@@ -136,20 +129,31 @@ public class DefaultBuildOperationWorkerRegistry implements BuildOperationWorker
         }
 
         @Override
-        boolean grantLease() {
-            if (children == 0 || root.grantLease()) {
-                children++;
-                return true;
+        void waitForLease() {
+            while (children != 0 && !semaphore.tryAcquire()) {
+                synchronized (lock) {
+                    waitingForLease.add(this);
+                    try {
+                        lock.wait();
+                    } catch (InterruptedException e) {
+                        throw UncheckedException.throwAsUncheckedException(e);
+                    }
+                }
+
             }
-            return false;
+            synchronized (lock) {
+                children++;
+            }
         }
 
         @Override
         void releaseLease() {
-            children--;
-            if (children > 0) {
-                root.releaseLease();
+            synchronized (lock) {
+                if (--children > 0) {
+                    semaphore.release();
+                }
             }
+            waitingForLease.wakeUpFirst();
         }
 
         @Override
@@ -163,17 +167,37 @@ public class DefaultBuildOperationWorkerRegistry implements BuildOperationWorker
                 // Not implemented - not yet required. Please implement if required
                 throw new UnsupportedOperationException("Must complete operation from owner thread.");
             }
-            synchronized (lock) {
-                parent.releaseLease();
-                threads.remove(ownerThread, this);
-                lock.notifyAll();
 
-                if (LOGGER.isDebugEnabled()) {
-                    LOGGER.debug("Build operation {} completed ({} worker(s) in use)", getDisplayName(), root.leasesInUse);
-                }
+            busyCount.decrementAndGet();
+            parent.releaseLease();
 
-                if (children != 0) {
-                    throw new IllegalStateException("Some child operations have not yet completed.");
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("Build operation {} completed ({} worker(s) in use)", getDisplayName(), busyCount);
+            }
+
+            if (children != 0) {
+                throw new IllegalStateException("Some child operations have not yet completed.");
+            }
+
+            // doesn't have to be done under lock, since it's all done for the current thread
+            popOperation();
+        }
+
+        private void popOperation() {
+            LinkedList<DefaultOperation> operations = operationsPerThread.get();
+            operations.remove(this);
+            if (operations.isEmpty()) {
+                operationsPerThread.remove();
+            }
+        }
+    }
+
+    private class WaitingForLeaseQueue extends LinkedBlockingQueue<DefaultOperation> {
+        public void wakeUpFirst() {
+            DefaultOperation operation = waitingForLease.poll();
+            if (operation != null) {
+                synchronized (operation.lock) {
+                    operation.lock.notify();
                 }
             }
         }
